fix : list 변경